# django_cowsay

./: .gitignore  README.md  db.sqlite3  pyproject.toml
cowchat_app/: admin.py  apps.py  forms.py  models.py  views.py
cowchat_app/migrations/: 0001_initial.py  0002_auto_20200819_0550.py
cowsay/: settings.py  urls.py
templates/: index.html  lastten.html
