[tool.poetry]
name = "django_cowsay"
version = "0.1.0"
description = "A simple django server that passes user input to the operating system, runs a command, retrieves the output, and sends it back to the client."
authors = ["Reginald Tjitradi <rtjitradi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
cowsay = "^2.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
